fix sigin in url in siginup page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -63,7 +63,7 @@
                                 <div class="card-footer">
                                     <div class="">
                                   
-                                        <p class="text-center m-0">New to Task Manager <a href="<%= new_registration_path(resource_name) %>" class="card-link">Sign Up</a></p>
+                                        <p class="text-center m-0">Already have a Account?<a href="<%= new_session_path(resource_name) %>" class="card-link">Sign In</a></p>
                                     </div>
                                 </div>
                             </div>
